--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,25 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Node Backend App</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-   <form action="/register">
-    <legend>
-        <label for="user_Name">Enter UserName
-            <input type="text" id="user_Name" maxlength="50" min="3" autocomplete="off" autocorrect="off" autofocus>
-        </label>
-    </legend>
-</br>
-    <legend>
-        <label for="email">Enter email
-            <input type="email" id="email" >
-        </label>
-    </legend>
-</br>
-    <input type="submit" id="submit_Button">
-   </form> 
-   <div id="error_Display"></div>
+   <div class="container">
+      <div class="form-wrapper">
+        <h1>Create Account</h1>
+        <form class="form" action="/register" >
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="user_Name" name="username" required maxlength="50" minlength="3" autocomplete="off" autocorrect="off" autofocus placeholder="Enter your username">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required placeholder="Enter your email">
+            </div>
+            <button type="submit" class="submit-btn" id="submit_Button">Sign Up</button>
+        </form>
+        <div id="error_Display" class="error-message"></div>
+      </div>
+
+      
+   </div>
+   <div class="form-wrapper">
+        <h1>Login</h1>
+        <form class="form" action="/login" method="POST">
+            <div class="form-group">
+                <label for="login-username">Username</label>
+                <input type="text" id="login-username" name="username" required maxlength="50" minlength="3" autocomplete="off" autocorrect="off" placeholder="Enter your username">
+            </div>
+            <div class="form-group">
+                <label for="login-email">Email</label>
+                <input type="email" id="login-email" name="email" required placeholder="Enter your email">
+            </div>
+            <button type="submit" class="submit-btn">Login</button>
+        </form>
+      </div>
    <script src="index.js"></script>
 </body>
 </html>
