added a secret key

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
    </div>
    <div class="form-wrapper">
         <h1>Login</h1>
-        <form class="form" action="/login" method="POST">
+        <form class="form" action="/dashboard" method="POST">
             <div class="form-group">
                 <label for="login-username">Username</label>
                 <input type="text" id="login-username" name="username" required maxlength="50" minlength="3" autocomplete="off" autocorrect="off" placeholder="Enter your username">
