--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,23 +9,6 @@
     <h1>welcome back <span id="userD"></span></h1>
 
     <a href="/logout">Logout</a>
-    <!-- <script src="index.js"></script> -->
-    <script>
-        
-           const userD =  document.getElementById('userD');
-let userData;
-       async function loadData(){
-        const  response = await fetch('/dashboard')
-         const userData =  await response.json();
-userD.textContent = userData;
- 
-    
-        console.log(userData);
-        alert(userData);
-    
-}
-
-loadData();
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
